Functions w/ real data

--- a/meeting_rooms.html
+++ b/meeting_rooms.html
@@ -16,9 +16,6 @@
         <th>
           Organization  
         </th>
-        <!--<th>
-            Meeting Title 
-        </th>-->
         <th>
           Start Time
         </th>
@@ -27,6 +24,9 @@
         </th>
         <th>
             Location
+        </th>
+        <th>
+            Purpose
         </th>
     </tr>
 </table>
