--- a/meeting_rooms.html
+++ b/meeting_rooms.html
@@ -6,7 +6,7 @@
 <script src = "meeting_rooms.js" ></script>
 </head>
 <body>
-<div id = "clockbox" style = "text-align: right;">
+<div id = "clockbox" style = "text-align: center;">
 </div>
 <h2>
     Meeting Rooms
