--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./logic.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css"></link>
+    <script src="./logic.js"></script>
     <title>Meeting Room Display</title>
   </head>
   <body>
     <nav class="nav">
         <div class="container-fluid" id="header">
-            <p id="img">img placeholder</p>
+            <img src="./assets/Logo_CHPL.png" class="thumbnail" id="img">
         </div>
     </nav>
     <div class="container-fluid" id="table-holder">
-        <div class="col-sm-12" id="reservation-display">
+      <div id="border">
+        <div class="col-lg-1" id="reservation-display">
             <table class="col-md-8" id="table"></table>
-        </div>
+        </div>  
+      </div>
     </div>
   </body>
+  <footer class="footer">
+    <p id="brand">Chapel Hill Public Library</p>
+  </footer>
 </html>
